Fix authentication modal z-index

--- a/src/main/webapp/css/highlight.css
+++ b/src/main/webapp/css/highlight.css
@@ -150,7 +150,7 @@
     right: 0;
     margin-left: auto;
     margin-right: auto;
-    z-index: 1001;
+    z-index: 1070;
     width: 347px;
     padding: 22px;
     border-radius: 7px;
@@ -192,7 +192,7 @@
     background-color: #0009;
     width: 100vw;
     height: 100vh;
-    z-index: 999;
+    z-index: 1069;
 }
 
 #savedHighlightMsg {
